# HM2

./: .gitignore  README.md
aruco_ros/aruco_ros/src/: simple_single.cpp
ros2_iiwa/: README.md
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py  iiwa_aruco_velocity.launch.py
ros2_iiwa/iiwa_description/env-hooks/: iiwa_description.sh.in
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: iiwa_aruco.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: FollowTrajectory.action
ros2_kdl_package/config/: homework2_params.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: camera_bridge.launch.py  ros2_kdl_node.launch.py
ros2_kdl_package/scripts/: diagnose_camera.sh
ros2_kdl_package/src/: kdl_control.cpp  ros2_kdl_node.cpp  trajectory_action_client.cpp  trajectory_action_server.cpp
